# autosentinx

./: .dockerignore  .env.example  .gitignore  DEVIATIONS.md  Dockerfile  LICENSE  README.md  aaravresults1.md  app.py  pyproject.toml  requirements.txt
alembic/: env.py
autosentinx/: __init__.py  anchor.py  audit.py  belief.py  catalog.py  classifier.py  collections.py  config.py  console.py  coverage.py  db.py  deploy_gate.py  dsl.py  gateway.py  ingestion.py  library.py  llm.py  models.py  orchestration.py  outcome.py  persuasion.py  playlib.py  recon.py  redaction.py  roe.py  runner.py  runview.py  security.py  seed_persuasion.py  seed_providers.py  selection.py  spine.py  spine_anchors.py  store.py  strategy_memory.py  suppression.py  target.py  verdict.py  web.py
catalog-seed/: frameworks.yaml  objectives.yaml
design documentation/: 00-PROCESS.md  01-user-research.md  02-personas.md  03-mapping.md  04-uiux-plan.md  05-critique.md  ASSUMPTIONS-LOG.md  BACKEND-UPDATE-2.md  BACKEND-UPDATE.md  CHANGELOG.md  DECISIONS.md  DESIGN.md  README.md  RUNBOOK.md  api-contract.md  conformance-triage.md  pl2-plan.md
persona-seed/: personas.yaml
pr-assets/: README.md
scenario-load/: authored.json  refined-plan.md  scenarios_raw.json
scripts/: backfill_play_objectives.py  build_prompt_lib.py  itest_engine_port.py  load_catalog.py  load_techniques.py  run_campaign.py
sentinx-web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
technique-seed/: techniques.yaml
tests/: test_anchor.py  (+30 more)
(+132 files in other folders)
