[project]
name = "autosentinx-poc"
version = "0.1.0"
description = "AutoSentinx POC — black-box red-teaming of NBFC voice agents (Phase 0 skeleton)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "google-genai>=1.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.29",
    "greenlet>=3.0",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "anthropic[vertex]>=0.40",
    "alembic>=1.13",
    "openai>=2.41.1",
]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

# Deps-only project — we don't build/install our own package; modules import from cwd.
[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
